Alterando meu individual para o novo formato do java em grupo

--- a/appCliente/java/pom.xml
+++ b/appCliente/java/pom.xml
@@ -30,11 +30,23 @@
             <version>8.1.0</version>
         </dependency>
         <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>12.4.1.jre11</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.britooo</groupId>
             <artifactId>looca-api</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
     </dependencies>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+
     <build>
         <plugins>
             <plugin>
